--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ h2 {
   font-size: 20px;
 }
 
+/* ===========================================
+   Options container
+   =========================================== */
+
 .options-container {
   display: flex;
   flex-direction: column;
@@ -42,6 +46,7 @@ h2 {
   gap: 12px;
 }
 
+/* Kitchen filter buttons */
 .btn-filter {
   background-color: #CCFFE2;
   color: #0018A4;
@@ -60,6 +65,12 @@ h2 {
   transform: scale(1.05);
 }
 
+.btn-filter.selected {
+  background-color: #0018A4;
+  color: white;
+}
+
+/* Sort filter buttons */
 .btn-sort {
   background-color: #FFECEA;
   color: #0018A4;
@@ -73,12 +84,20 @@ h2 {
 }
 
 .btn-sort:hover {
+  background-color: #FF6589;
+  color: white;
   border: 2px solid #0018A4;
   cursor: pointer;
   transform: scale(1.05);
 }
 
-/* Surprise me */
+.btn-sort.selected {
+  background-color: #FF6589;
+  color: white;
+  border: 2px solid #FF6589;
+}
+
+/* Surprise me button */
 .btn-random {
   background-image: linear-gradient(135deg, #ae88ff 0%, #7f9fff 51%, #aa88ff 100%);
   color: yellow;
@@ -88,33 +107,24 @@ h2 {
   border-radius: 50px;
   margin-bottom: 12px;
   border: 2px solid transparent;
-  border: none;
   cursor: pointer;
   transition: all 0.2s ease;
 }
 
 .btn-random:hover {
   transform: scale(1.05);
-}
-
-.btn-filter.selected {
-  background-color: #0018A4;
-  color: white;
-}
-
-.btn-sort.selected {
-  background-color: #FF6589;
-  color: white;
-  border: none;
+  border: 2px solid #0018A4;
 }
 
 .btn-random.selected {
   background-image: none;
-  background-color: #FFD700;
-  color: #0018A4;
+  background-color: #6a529c;
+  color: white;
 }
 
-/* Recipe-container */
+/* ===========================================
+   Recipe container
+   =========================================== */
 .recipes-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -123,6 +133,7 @@ h2 {
   margin-top: 40px;
 }
 
+/* Recipe cards */
 .recipe-card {
   border: 2px solid #e9e9e9;
   background: white;
@@ -161,6 +172,9 @@ hr.solid {
   border-radius: 12px;
 }
 
+/* ===========================================
+   Media queries
+   =========================================== */
 @media (min-width: 668px) {
   h1 {
     font-size: 64px;
@@ -188,7 +202,24 @@ hr.solid {
     max-width: 800px;
   }
 
+  .placeholder-output {
+    font-size: 20px;
+  }
+
   .recipe-card {
     gap: 16px;
+  }
+
+  .recipe-card h2 {
+    margin: 2px 0;
+  }
+
+  .recipe-card p {
+    font-size: 18px;
+    margin: 0;
+  }
+
+  hr.solid {
+    margin: 0;
   }
 }
