--- a/style.css
+++ b/style.css
@@ -4,14 +4,15 @@
 
 body {
   font-family: "Jost", sans-serif;
-  padding: 0 14px;
+  padding: 0;
+  margin: 0;
 }
 
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 16px;
+  padding: 16px 14px;
   background-color: #fff;
 }
 
@@ -53,7 +54,8 @@ header {
 header,
 .options-container {
   margin: 0 auto;
-  max-width: 1200px;
+  padding-left: 14px;
+  max-width: 100%;
 }
 
 h1 {
@@ -74,6 +76,7 @@ h2 {
 .options-container {
   display: flex;
   flex-direction: column;
+  padding: 0 14px;
   gap: 20px;
   margin: 0 auto;
 }
@@ -169,8 +172,9 @@ h2 {
    =========================================== */
 #recipeContainer {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
   justify-content: center;
+  padding: 0 14px;
   gap: 20px;
   margin-top: 40px;
 }
@@ -274,11 +278,6 @@ hr.solid {
     margin-bottom: 40px;
   }
 
-  #recipeContainer {
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 24px;
-  }
-
   .placeholder-output {
     font-size: 20px;
   }
@@ -301,20 +300,10 @@ hr.solid {
   }
 }
 
-@media (min-width: 1024px) {
-  /* #recipeContainer {
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-    gap: 28px;
-    justify-content: center;
-  } */
+@media (min-width: 1600px) {
 
-  @media (min-width: 1600px) {
-    header {
-      max-width: 1300px;
-    }
-
-    .options-container {
-      max-width: 1400px;
-    }
+  header,
+  .options-container {
+    max-width: 1400px;
   }
 }
