--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ header {
    =========================================== */
 h2 {
   font-weight: 700;
-  font-size: 20px;
+  font-size: 24px;
 }
 
 .options-container {
@@ -139,7 +139,6 @@ h2 {
   padding: 10px 14px;
   gap: 20px;
   margin: 0 auto;
-  max-width: 100%;
 }
 
 .filter-buttons,
@@ -395,7 +394,7 @@ hr.solid {
   }
 
   #recipeContainer {
-    padding: 0 40px 40px 40px;
+    padding: 0 40px 40px;
   }
 
   .placeholder-output {
@@ -420,7 +419,6 @@ hr.solid {
     margin: 0;
   }
 }
-
 
 @media (min-width: 1200px) {
   h1 {
